--- a/package.json
+++ b/package.json
@@ -3,34 +3,39 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "deploy": "vite build && xcopy dist docs /E /I /Y && git add docs && git commit -m \"Déploiement GitHub Pages\" && git push"
+},
+
   "dependencies": {
     "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "mammoth": "^1.6.0",
-    "pdfjs-dist": "^3.11.174"
+    "pdfjs-dist": "^3.11.174",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
-  "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "vite-plugin-pwa": "^0.18.0"
-  }
+"devDependencies": {
+  "@eslint/js": "^9.9.1",
+  "@types/react": "^18.3.5",
+  "@types/react-dom": "^18.3.0",
+  "@vitejs/plugin-react": "^4.5.1",
+  "autoprefixer": "^10.4.18",
+  "eslint": "^9.9.1",
+  "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+  "eslint-plugin-react-refresh": "^0.4.11",
+  "globals": "^15.9.0",
+  "postcss": "^8.4.35",
+  "tailwindcss": "^3.4.1",
+  "typescript": "^5.8.3",
+  "typescript-eslint": "^8.3.0",
+  "vite": "^5.4.2",
+  "vite-plugin-pwa": "^0.18.0",
+  "vitest": "^1.5.0"
+}
+
 }
